# rust-opengl

./: Cargo.toml
res/shaders/: default.frag  default.vert  light.frag  light.vert
src/: camera.rs  main.rs  model.rs  shader.rs  texture.rs
src/mesh/: ebo.rs  mod.rs  vao.rs  vbo.rs
